fixed nav signup and login forms to display on app.js at a higher z-index. Will want to potentially style as popup form

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -37,11 +37,26 @@
   }
 } */ 
 
+#nav {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  justify-content: flex-end;
+  background-color: aliceblue;
+}
+
+#nav h3 {
+  margin-right: 3em;
+}
+
+
 #signup-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  z-index: 5;
+  margin-top: -100px;
 }
 
 #signup-form form {
@@ -64,6 +79,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  z-index: 5;
+  margin-top: -100px;
 }
 
 #login-form form {
